cmake_minimum_required(VERSION 2.6)
project(ibus-mio)
add_executable(ibus-setup-mio gtktes.c)
add_executable(mio levena.cpp configloader.cpp)
target_link_libraries(mio jansson)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK2 gtk+-2.0 REQUIRED)
include_directories(${GTK2_INCLUDE_DIRS})
target_link_libraries(ibus-setup-mio ${GTK2_LIBRARIES})

pkg_check_modules(IBUS1 ibus-1.0 REQUIRED)
include_directories(${IBUS1_INCLUDE_DIRS})
target_link_libraries(mio ${IBUS1_LIBRARIES})

install(FILES hinata.jpg DESTINATION /usr/share/ibus/component/ RENAME ibus-mio.jpg)
install(FILES levena.xml DESTINATION /usr/share/ibus/component/ RENAME mio.xml)